# geohierarchy

./: LICENSE  pyproject.toml
docs/: uml.iuml
examples/: example_input.yaml  geoh_sandbox.py  model1.yaml  parsing_root.py  parsing_yaml.py
examples/model_schemas/: mf6_schema.yaml
src/geoconfig/: __init__.py
src/geoconfig/input_types/: definitions.py  input_factory.py
src/geoconfig/input_types/filepath/: filetype_factory.py
src/geoconfig/main_config/: InputConfig.py  SchemaConfig.py  UserConfig.py  input_config copy.py  input_config.py
src/geoconfig/settings/: config.py  input_schema.yaml
src/geoconfig/user_input/: input_types.py  user_input_classifier.py  user_input_factory.py
src/geoconfig/user_input/filepath/: file_openers.py
src/geoconfig/yamlinputspec/: YamlInputSpec_base.py  helpers.py  spectypeclassifier.py  yaml_spec_class.py
src/geoconfig/yamlinputspec/input_types/: definitions.py  registry.py  setup.py
src/geohierarchy/: __init__.py  input.py
src/geohierarchy/io/: geohierarchy_from_mask.py  opener_registry.py  openers.py  readparser.py
