[project]
name = "geoconfig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "taraaubrey", email = "tara.a.forstner@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "path>=17.1.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
